--- a/website/apps/alibrary/templates/alibrary/playlist/list_item_l.html
+++ b/website/apps/alibrary/templates/alibrary/playlist/list_item_l.html
@@ -95,10 +95,11 @@
         <ul class="unstyled action secondary horizontal clearfix">
 
             <li>
-                <a href="#release:{{ item.pk }}:mp3"
-                   class="downloadable queue{% if not perms.alibrary.downoad_media %} disabled{% endif %}"
+                <a href="#"
+                   class="{% if not perms.alibrary.downoad_media %} disabled{% endif %}"
                    data-ct="playlist"
-                   data-resource_uri="{{ item.get_api_url }}"
+                   data-id="{{ item.pk }}"
+                   data-action="download"
                    title="{% trans "Download" %}">
                     <i class="icon icon-download-alt"></i>
                 </a>
