--- a/website/site-static/sass/_asite.sass
+++ b/website/site-static/sass/_asite.sass
@@ -88,18 +88,18 @@
 @import bootstrap/pager
 
 // Components: Popovers
-@import bootstrap/modals
-@import bootstrap/tooltip
-@import bootstrap/popovers
+//@import bootstrap/modals
+//@import bootstrap/tooltip
+//@import bootstrap/popovers
 
 // Components: Misc
 @import bootstrap/thumbnails
 @import asite/thumbnails
-@import bootstrap/labels
+//@import bootstrap/labels
 @import bootstrap/progress-bars
-@import bootstrap/accordion
-@import bootstrap/carousel
-@import bootstrap/hero-unit
+//@import bootstrap/accordion
+//@import bootstrap/carousel
+//@import bootstrap/hero-unit
 
 // Utility classes
 @import bootstrap/utilities
