--- a/website/apps/alibrary/templates/alibrary/media_list.html
+++ b/website/apps/alibrary/templates/alibrary/media_list.html
@@ -1,39 +1,47 @@
 {% extends "layout_base.html" %}
-{% load spurl cache i18n truncate cache dajaxice_templatetags sekizai_tags%}
+{% load spurl cache i18n truncate cache dajaxice_templatetags sekizai_tags %}
 
 {% block heading %}
-<!-- view specific scripts -->
-{% addtoblock "js-post" %}{% dajaxice_js_import %}{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}alibrary/js/list.edit.js"></script>{% endaddtoblock %}
+    <!-- view specific scripts -->
+    {% addtoblock "js-post" %}{% dajaxice_js_import %}{% endaddtoblock %}
+    {% addtoblock "js-post" %}
+        <script type="text/javascript" src="{{ STATIC_URL }}alibrary/js/list.edit.js"></script>{% endaddtoblock %}
 
-{% addtoblock "js-post" %}
-    <script>
-    var list_edit = list_edit || {};
-    $(function(){
-       list_edit = new ListEditUi();
-       list_edit.init();
-    });
-    </script>
-{% endaddtoblock %}
+    {% addtoblock "js-post" %}
+        <script type="text/javascript" src="{{ STATIC_URL }}exporter/js/base.js"></script>{% endaddtoblock %}
 
-<!-- heading / icon (large one) -->
-<div id="heading">
-	{% include "skeleton/heading.html" %}
-</div>
-<!-- heading / icon (large one) -->
+    {% addtoblock "js-post" %}
+        <script>
+            var list_edit = list_edit || {};
+            $(function () {
+                list_edit = new ListEditUi();
+                list_edit.init();
+
+                exporter = new ExporterApp();
+                exporter.api_url = '{% url api_dispatch_list resource_name='export' api_name='v1'%}';
+                exporter.init();
+            });
+        </script>
+    {% endaddtoblock %}
+
+    <!-- heading / icon (large one) -->
+    <div id="heading">
+        {% include "skeleton/heading.html" %}
+    </div>
+    <!-- heading / icon (large one) -->
 {% endblock %}
 
 {% block modnav %}
-<!-- start: intra-module navigation -->
-<div id="modnav">
-	{% include "skeleton/modnav.html" %}
-</div>
-<!-- end: intra-module navigation -->
+    <!-- start: intra-module navigation -->
+    <div id="modnav">
+        {% include "skeleton/modnav.html" %}
+    </div>
+    <!-- end: intra-module navigation -->
 {% endblock %}
 
 {% block tagcloud %}
 
-{% include "alibrary/element/_tagcloud.html" %}
+    {% include "alibrary/element/_tagcloud.html" %}
 
 {% endblock %}
 
@@ -49,122 +57,131 @@
 
 {% block inner %}
 
-<div class="listhead">
+    <div class="listhead">
 
-    <div class="pagination-holder">
-        {% include "element/_pagination.html" %}
-    </div>
+        <div class="pagination-holder">
+            {% include "element/_pagination.html" %}
+        </div>
 
-	<div class="wrapper list_style">
+        <div class="wrapper list_style">
 
-			<ul class="unstyled">
+            <ul class="unstyled">
+                <li class="left">
+                    <a href="{% spurl base=request.get_full_path set_query="list_style=s" %}" title="Set Style"
+                       class="action list_style s {% if list_style == "s" %}active{% endif %}"><img
+                            src="/static/img/base/spacer.png" width="16" height="16" alt="Disply Type"/></a>
+                </li>
+                <!--
 				<li class="left">
-					<a href="{% spurl base=request.get_full_path set_query="list_style=s" %}" title="Set Style" class="action list_style s {% if list_style == "s" %}active{% endif %}"><img src="/static/img/base/spacer.png" width="16" height="16" alt="Disply Type" /></a>
-				</li>
-            <!--
-				<li class="left">
-					<a href="{% spurl base=request.get_full_path set_query="list_style=m" %}" title="Set Style" class="action list_style m {% if list_style == "m" %}active{% endif %}"><img src="/static/img/base/spacer.png" width="16" height="16" alt="Disply Type" /></a>
+					<a href="{% spurl base=request.get_full_path set_query="list_style=m" %}" title="Set Style" class="action list_style m
+                        {% if list_style == "m" %}active{% endif %}"><img src="/static/img/base/spacer.png" width="16" height="16" alt="Disply Type" /></a>
 				</li>
 -->
 
                 <li class="clear"></li>
-			</ul>
+            </ul>
 
-	</div>
+        </div>
 
-</div>
-<!-- end: listing header / paginator -->
+    </div>
+    <!-- end: listing header / paginator -->
 
-<!-- start: listing output -->
-<div class="listview container medias {{ list_style }}">
+    <!-- start: listing output -->
+    <div class="listview container medias {{ list_style }}">
 
-	{% if list_style == "s" %}
+        {% if list_style == "s" %}
 
-	<div class="list_header">
-		<div class="list_header_item c1">
-			&nbsp;
-		</div>
+            <div class="list_header">
+                <div class="list_header_item c1">
+                    &nbsp;
+                </div>
 
-		<div class="list_header_item c2 sortable {% if get.order_by == "name" %}active{% endif %} {{ get.direction }}">
-			<a href="{% spurl base=request.get_full_path set_query="order_by=name" toggle_query="direction=ascending,descending" %}" style="display: block;">{% trans "Title / Artist" %}</a>
-		</div>
+                <div class="list_header_item c2 sortable {% if get.order_by == "name" %}active{% endif %} {{ get.direction }}">
+                    <a href="{% spurl base=request.get_full_path set_query="order_by=name" toggle_query="direction=ascending,descending" %}"
+                       style="display: block;">{% trans "Title / Artist" %}</a>
+                </div>
 
-		<div class="list_header_item c3">
-			{% trans "Release / Label" %}
-		</div>
-		<div class="list_header_item c4 sortable {% if get.order_by == "duration" %}active{% endif %} {{ get.direction }}">
-			<a href="{% spurl base=request.get_full_path set_query="order_by=duration" toggle_query="direction=ascending,descending" %}" style="display: block;">{% trans "Duration" %}</a>
-		</div>
-		<div class="list_header_item c5">
-			{% trans "License" %}
-		</div>
+                <div class="list_header_item c3">
+                    {% trans "Release / Label" %}
+                </div>
+                <div class="list_header_item c4 sortable {% if get.order_by == "duration" %}active{% endif %} {{ get.direction }}">
+                    <a href="{% spurl base=request.get_full_path set_query="order_by=duration" toggle_query="direction=ascending,descending" %}"
+                       style="display: block;">{% trans "Duration" %}</a>
+                </div>
+                <div class="list_header_item c5">
+                    {% trans "License" %}
+                </div>
 
-		<div class="list_header_item c6">
-			&nbsp;
-		</div>
-	</div>
+                <div class="list_header_item c6">
+                    &nbsp;
+                </div>
+            </div>
 
-	{% endif %}
+        {% endif %}
 
-	<div class="list_body">
+        <div class="list_body">
 
-		{% for item in object_list %}
+            {% for item in object_list %}
 
-		{# switching list styles #}
-		{% if list_style == "s" %}
-		{% include "alibrary/media/list_item_s.html" %}
-		{% endif %}
+                {# switching list styles #}
+                {% if list_style == "s" %}
+                    {% include "alibrary/media/list_item_s.html" %}
+                {% endif %}
 
-		{% if list_style == "m" %}
-		{% include "alibrary/media/list_item_m.html" %}
-		{% endif %}
+                {% if list_style == "m" %}
+                    {% include "alibrary/media/list_item_m.html" %}
+                {% endif %}
 
-		{% if list_style == "l" %}
-		{% include "alibrary/media/list_item_l.html" %}
-		{% endif %}
+                {% if list_style == "l" %}
+                    {% include "alibrary/media/list_item_l.html" %}
+                {% endif %}
 
-		{% endfor %}
+            {% endfor %}
 
-	</div>
-</div>
+        </div>
+    </div>
 
-<!-- start: listing footer -->
-<div class="listview footer">
-	<div class="right ipp">
+    <!-- start: listing footer -->
+    <div class="listview footer">
+        <div class="right ipp">
 
-		<ul class="unstyled horizontal">
+            <ul class="unstyled horizontal">
 
-			{% spurl base=request.get_full_path active_query="ipp=12" as is_active %}
-			<li>
-				<a class="{% if is_active %}active{% endif %}" href="{% spurl base=request.get_full_path set_query="ipp=12" %}">12</a>
-			</li>
+                {% spurl base=request.get_full_path active_query="ipp=12" as is_active %}
+                <li>
+                    <a class="{% if is_active %}active{% endif %}"
+                       href="{% spurl base=request.get_full_path set_query="ipp=12" %}">12</a>
+                </li>
 
-			{% spurl base=request.get_full_path active_query="ipp=24" as is_active %}
-			<li>
-				<a class="{% if is_active %}active{% endif %}" href="{% spurl base=request.get_full_path set_query="ipp=24" %}">24</a>
-			</li>
+                {% spurl base=request.get_full_path active_query="ipp=24" as is_active %}
+                <li>
+                    <a class="{% if is_active %}active{% endif %}"
+                       href="{% spurl base=request.get_full_path set_query="ipp=24" %}">24</a>
+                </li>
 
-			{% spurl base=request.get_full_path active_query="ipp=36" as is_active %}
-			<li>
-				<a class="{% if is_active %}active{% endif %}" href="{% spurl base=request.get_full_path set_query="ipp=36" %}">36</a>
-			</li>
+                {% spurl base=request.get_full_path active_query="ipp=36" as is_active %}
+                <li>
+                    <a class="{% if is_active %}active{% endif %}"
+                       href="{% spurl base=request.get_full_path set_query="ipp=36" %}">36</a>
+                </li>
 
-		</ul>
+            </ul>
 
-	</div>
-	<div id="control_selection" class="left control_selection">
-		<span>Selection:</span>
-		<a href="#selection:invert" class="action">Invert</a>&nbsp;<a href="#selection:all" class="action">All</a>&nbsp;<a href="#selection:clear" class="action">None</a>
-	</div>
-	<div class="clear">
-		&nbsp;
-	</div>
-</div>
-<!-- end: listing footer -->
+        </div>
+        <div id="control_selection" class="left control_selection">
+            <span>Selection:</span>
+            <a href="#selection:invert" class="action">Invert</a>&nbsp;<a href="#selection:all" class="action">All</a>&nbsp;<a
+                href="#selection:clear" class="action">None</a>
+        </div>
+        <div class="clear">
+            &nbsp;
+        </div>
+    </div>
+    <!-- end: listing footer -->
 
 {% endblock %}
 
 {% block sidebar %}
-{% include "alibrary/media/sidebar/_list.html" %}
+    {% include "alibrary/media/sidebar/_list.html" %}
 {% endblock %}
 
