--- a/website/apps/alibrary/templates/alibrary/playlist_list.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_list.html
@@ -12,11 +12,13 @@
     {% addtoblock "js-post" %}
         <script>
             var list_edit = list_edit || {};
+            var exporter = exporter || {};
             $(function () {
                 list_edit = new ListEditUi();
                 list_edit.init();
 
                 exporter = new ExporterApp();
+                exporter.api_url = '{% url api_dispatch_list resource_name='export' api_name='v1'%}';
                 exporter.init();
 
             });
