--- a/website/apps/postman/templates/postman/base.html
+++ b/website/apps/postman/templates/postman/base.html
@@ -7,19 +7,18 @@
 
 {% block heading %}
 <!-- heading / icon (large one) -->
-{% addtoblock "css" %}
-<link type="text/css" media="all" rel="stylesheet" href="{{ STATIC_URL }}postman/css/postman.css" />
-{% endaddtoblock %}
+{% addtoblock "css" %}{% endaddtoblock %}
 
 <div id="heading">
-	{% with page_title="Messaging" %}
+	{% with page_title="Messaging" icon="icon-envelope-alt" %}
 	{% include "skeleton/heading.html" %}
 	{% endwith %}
 </div>
 <!-- heading / icon (large one) -->
 {% endblock %}
 
-{% block modnav %} <!-- start: intra-module navigation -->
+{% block modnav %}
+<!-- start: intra-module navigation -->
 <div id="modnav">
 	<li>
 		<a href="{% url 'postman_inbox' %}">{% trans "Inbox" %}{% if unread_count %} <strong>({{ unread_count }})</strong>{% endif %}</a>
