--- a/website/apps/postman/templates/postman/inc_subject_ex.html
+++ b/website/apps/postman/templates/postman/inc_subject_ex.html
@@ -18,5 +18,15 @@ With subject: "a subject of great interest for you":
 With subject: "a great interest":
 "a great interest - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed ..."
 
-{% endcomment %}{% load postman_tags %}{% with message.subject|truncatewords:5 as truncated_subject %}{{ truncated_subject }}
-{% with truncated_subject|wordcount as subject_wc %}{% with 12|sub:subject_wc as wc %}{% if message.body and wc > 0 %} - <span style="color: grey">{{ message.body|truncatewords:wc }}</span>{% endif %}{% endwith %}{% endwith %}{% endwith %}
+{% endcomment %}
+
+{% load postman_tags %}
+{% with message.subject|truncatewords:7 as truncated_subject %}
+<span class="subject">{{ truncated_subject }}</span>
+{% with truncated_subject|wordcount as subject_wc %}
+{% with 24|sub:subject_wc as wc %}
+ {% if message.body and wc > 0 %}<div class="body-preview"><span>&#171;</span>{{ message.body|truncatewords:wc }}<span>&#187;</span></div>
+ {% endif %}
+{% endwith %}
+{% endwith %}
+{% endwith %}
